# nasral-engine

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  conanfile.txt
content/materials/: compile_shaders.bat  compile_shaders.sh
content/materials/dummy/: material.xml  shader.frag  shader.vert
content/materials/pbr/: material.xml  shader.frag  shader.geom  shader.vert
content/materials/phong/: material.xml  shader.frag  shader.vert
content/materials/textured/: material.xml  shader.frag  shader.vert
content/materials/triangle/: material.xml
content/materials/uniforms/: material.xml  shader.frag  shader.vert
content/materials/vertex-colored/: material.xml  shader.frag  shader.vert
content/test/: checkerboard.pix
docs/: resources.md
include/nasral/: core_types.h  engine.h
include/nasral/logging/: logger.h  logging_types.h
include/nasral/rendering/: material_instance.h  mesh_instance.h  renderer.h  rendering_types.h
include/nasral/resources/: file.h  material.h  mesh.h  ref.h  resource_manager.h  resource_types.h  shader.h  texture.h
include/nasral/resources/loaders/: loader.h  material_loader.h  shader_loader.h
include/vulkan/utils/: buffer.hpp  device.hpp  framebuffer.hpp  image.hpp  uniform_layout.hpp
sources/demo-app/: CMakeLists.txt  main.cpp  pch.h
sources/demo-app/utils/: fps_counter.hpp  frame_timer.hpp  surface_provider.hpp
sources/engine/: CMakeLists.txt  engine.cpp  pch.h
sources/engine/logging/: logger.cpp
sources/engine/rendering/: material_instance.cpp  mesh_instance.cpp  renderer.cpp
sources/engine/resources/: file.cpp  material.cpp  mesh.cpp  ref.cpp  resource_manager.cpp  shader.cpp  texture.cpp
sources/engine/resources/loaders/: material_loader.cpp  material_loader.hpp  mesh_builtin_loader.hpp  mesh_loader.hpp  mesh_mock_loader.hpp  shader_loader.cpp  shader_loader.hpp  texture_builtin_loader.hpp  texture_loader.hpp
